appId: com.onboarding.app
---
- launchApp:
    clearState: true
- tapOn: 'Enter Name'
- inputText: 'Snow'
- tapOn: 'Submit Name'

- assertVisible: 'My name is Snow'

- runFlow:
    when:
      visible: 'Users, tab, 1 of 2'
    commands:
      - tapOn: 'Users, tab, 1 of 2'

- runFlow:
    file: 'users.yml'
